Bug 240344 - It 's impossible to redirect several messages at once
Summary: It 's impossible to redirect several messages at once
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.13.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-01 13:00 UTC by Vsevolod Krishchenko
Modified: 2012-07-12 18:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vsevolod Krishchenko 2010-06-01 13:00:58 UTC
Version:           1.13.3 (using KDE 4.4.3) 
OS:                Linux

A multiple selection in message list disables Forward-Redirect menu item.

Redirect action requires destination address only so it is unclear why redirection does not work with several messages.

Reproducible: Always

Steps to Reproduce:
1. Select several messages in Sent folder using Shift+Click.
2. Press and hold Forward button.


Actual Results:  
Redirect menu item is disabled.

Expected Results:  
I still want to redirect all the messages I selected.
Comment 1 Laurent Montel 2012-07-12 18:38:48 UTC
Git commit ecc45f6bbad125c78655f15c7a494e03cad599fe by Montel Laurent.
Committed on 12/07/2012 at 20:37.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 240344 - It 's impossible to redirect several messages at once

FIXED-IN: 4.9

M  +46   -35   kmail/kmcommands.cpp
M  +1    -0    kmail/kmcommands.h
M  +5    -4    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/ecc45f6bbad125c78655f15c7a494e03cad599fe