Fix Bug 240344 - It 's impossible to redirect several messages at once

FIXED-IN: 4.9
BUG: 240344